# monotonic_clock

./: .gitignore  LICENSE  Makefile.am  Makefile.am.common  Makefile.in  README  acinclude.m4  aclocal.m4  bootstrap.sh  config.h.in  configure  configure.ac  libmonotonic_clock.pc.in
doc/: README
include/: monotonic_clock.h
src/: Makefile.am  Makefile.in  monotonic_clock.c  monotonic_common.c  monotonic_fallback.c  monotonic_generic.c  monotonic_mach.c  monotonic_win32.c  test_monotonic_clock.c
